app/assets/stylesheets/api/reviews.scss
// Place all the styles related to the api/reviews controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

section.review-index-container {
  display: flex;
  flex-direction: column;
  word-wrap: break-word;
  height: calc(100vh - 56px);
  min-width: 200px;
  max-width: 250px;
  // background: #29475f;
  margin: 10px 0 0 0;
  color: #0b141a;
}

.review-index-container img {
  margin-right: 5px;
}

.review-index-items {
  overflow-y: scroll;
  height: 82.5vh;
  padding: 10px;
  background: #7c99aa;
  // text-shadow:
  //   -1px -1px 0 rgba(0, 0, 0, 0.75),
  //   1px -1px 0 rgba(0, 0, 0, 0.75),
  //   -1px 1px 0 rgba(0, 0, 0, 0.75),
  //   1px 1px 0 rgba(0, 0, 0, 0.75);
  box-shadow:
    -1px -1px 0 rgba(0, 0, 0, 0.75),
    1px -1px 0 rgba(0, 0, 0, 0.75),
    -1px 1px 0 rgba(0, 0, 0, 0.75),
    1px 1px 0 rgba(0, 0, 0, 0.75);
  border: 2px solid rgba(169,240,255, 0.25);
}

.new-review-form {
  padding: 10px;
  margin: 0 0 10px 0;
  font-size: 14px;
  background: #7c99aa;
  // text-shadow:
  //   -1px -1px 0 rgba(0, 0, 0, 0.75),
  //   1px -1px 0 rgba(0, 0, 0, 0.75),
  //   -1px 1px 0 rgba(0, 0, 0, 0.75),
  //   1px 1px 0 rgba(0, 0, 0, 0.75);
  box-shadow:
    -1px -1px 0 rgba(0, 0, 0, 0.75),
    1px -1px 0 rgba(0, 0, 0, 0.75),
    -1px 1px 0 rgba(0, 0, 0, 0.75),
    1px 1px 0 rgba(0, 0, 0, 0.75);
  border: 2px solid rgba(169,240,255, 0.25);
}

.new-review-form textarea {
  width: 95.5%;
  height: 80px;
  margin: 0 0 5px 0;
  background: #2b4251;
  border-radius: 3px;
  border-left: 2px solid rgba(169,240,255, 0.3);
  border: 2px solid rgba(169,240,255, 0.3);
  color: rgba(208,247,255, 0.75);
  font-size: 14px;
}

.new-review-form button {
  font-size: 14px;
  background: #2b4251;
}

.review-index-item {
  font-size: 14px;
  padding: 10px 0;
  border-bottom: 1px solid rgba(169,240,255, 0.25);
}

.review-index-item:first-child {
  padding: 0 0 10px 0;
}

.review-profile-picture {
  margin: 0 10px 0 0;
}

.review-user-info {
  display: flex;
  align-items: center;
}

.review-content {
  margin: 10px 0 0 0;
}

input[type=radio]:hover {
  cursor: pointer;
}

.complete-review-create-button {
  display: flex;
}

.review-create-plus {
  margin: 0 0 0 5px;
}
// .new-review-form .dv-star-rating-star i {
//   will-change: color;
// }

.new-review-form .dv-star-rating-star:hover ~ .dv-star-rating-star,
.new-review-form .dv-star-rating-star:hover {
  color: rgb(255, 180, 0);
  transition: ease-in-out 0.5s;
  text-shadow:
    -1px -1px 0.5px #b9dbe2,
    1px -1px 0.5px #b9dbe2,
    -1px 1px 0.5px #b9dbe2,
    1px 1px 0.5px #b9dbe2;
}

